# MGA-Compass

./: .gitattributes  LICENSE  README.md  docker-compose.yml
.github/workflows/: backend-tests.yml  docker-publish-backend.yml  docker-publish-frontend.yml  docker-publish.yml  pages.yml
app/backend/: Dockerfile  pyproject.toml
app/backend/data/: duals.pkl  generation_over_snapshots.pkl  installed_capacity.pkl  manifest.json  points.pkl
app/backend/mgaserver/: config.py  main.py
app/backend/tests/: conftest.py  test_endpoints.py
app/frontend/: .gitignore  README.md  package-lock.json  package.json  vite.config.js
app/frontend/scripts/: gen-pwa-icons.mjs
app/frontend/src/: index.html
app/frontend/src/components/: Navigate.vue
backend/: .gitignore  pyproject.toml
backend/mgaserver/: api_models.py  config.py  core.py  data.py  main.py  schemes.py
backend/tests/: conftest.py  test_core.py  test_endpoints.py  test_schemes.py
docs/presentation/: index.html  package-lock.json
frontend/: .gitignore  package-lock.json  vite.config.js
frontend/src/: App.vue  index.html
frontend/src/components/: Navigate.vue  Traverse.vue
frontend/src/components/navigate/: MessageBox.vue  PriorityItem.vue
frontend/src/components/traverse/: Chart.vue  Slider.vue
frontend/src/shared/: api.js
mga-compass/: .gitignore  README.md  pyproject.toml
mga-compass/scripts/: generate_dataset.py
mga-compass/src/mga_compass/: __init__.py  core.py  manifest.py  pypsa_ext.py  solvers.py
mga-compass/tests/: conftest.py  test_core.py  test_pypsa_ext.py  test_schemes.py
(+1 files in other folders)
