[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mga_compass"]

[tool.pytest.ini_options]
log_cli = true
log_cli_level = "DEBUG"
testpaths = ["tests"]

[project]
name = "mga-compass"
version = "0.1.0"
description = "Real-time exploration of near-optimal solutions for PyPSA energy planning models"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "linopy>=0.6.7",
    "pandera>=0.31.1",
    "pypsa>=1.2.0",
    "pandas",
    "numpy",
    "xarray",
    "pydantic",
    "netCDF4",
    "gurobipy>=13.0.2",
]

[project.optional-dependencies]
test = ["pytest>=9.0.3"]
